// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/item-details/ItemProperties should not render properties when not specified 1`] = `
<dl
  className="item-properties"
>
  <RetentionPolicy />
</dl>
`;

exports[`features/item-details/ItemProperties should pass classification props to ClassificationProperty when specified 1`] = `
<dl
  className="item-properties"
>
  <RetentionPolicy />
</dl>
`;

exports[`features/item-details/ItemProperties should render editable description when onDescriptionChange is specified 1`] = `
<dl
  className="item-properties"
>
  <FormattedMessage
    defaultMessage="Description"
    id="boxui.itemDetails.description"
  >
    <Component />
  </FormattedMessage>
  <dd>
    <EditableDescription
      onDescriptionChange={[Function]}
      textAreaProps={
        {
          "aria-labelledby": "description_3",
          "data-resin-target": "description",
        }
      }
      value="description"
    />
  </dd>
  <RetentionPolicy />
</dl>
`;

exports[`features/item-details/ItemProperties should render editable description when onDescriptionChange is specified 2`] = `
<dl
  className="item-properties"
>
  <FormattedMessage
    defaultMessage="Description"
    id="boxui.itemDetails.description"
  >
    <Component />
  </FormattedMessage>
  <dd>
    <EditableDescription
      onDescriptionChange={[Function]}
      textAreaProps={
        {
          "aria-labelledby": "description_4",
          "data-resin-target": "description",
        }
      }
      value=""
    />
  </dd>
  <RetentionPolicy />
</dl>
`;

exports[`features/item-details/ItemProperties should render editable url when url and onValidURLChange are specified 1`] = `
<dl
  className="item-properties"
>
  <FormattedMessage
    defaultMessage="URL"
    id="boxui.itemDetails.url"
    tagName="dt"
  />
  <dd>
    <EditableURL
      onValidURLChange={[Function]}
      value="box.com"
    />
  </dd>
  <RetentionPolicy />
</dl>
`;

exports[`features/item-details/ItemProperties should render properties when specified 1`] = `
<dl
  className="item-properties"
>
  <FormattedMessage
    defaultMessage="Description"
    id="boxui.itemDetails.description"
  >
    <Component />
  </FormattedMessage>
  <dd>
    <ReadonlyDescription
      value="Hi
testing this link http://box.com"
    />
  </dd>
  <FormattedMessage
    defaultMessage="Owner"
    id="boxui.itemDetails.owner"
    tagName="dt"
  />
  <dd>
    Test Owner
  </dd>
  <FormattedMessage
    defaultMessage="Enterprise Owner"
    id="boxui.itemDetails.enterpriseOwner"
    tagName="dt"
  />
  <dd>
    Test Enterprise Owner
  </dd>
  <FormattedMessage
    defaultMessage="Uploader"
    id="boxui.itemDetails.uploader"
    tagName="dt"
  />
  <dd>
    Test Uploader
  </dd>
  <FormattedMessage
    defaultMessage="Created"
    id="boxui.itemDetails.created"
    tagName="dt"
  />
  <dd>
    <FormattedDate
      day="numeric"
      hour="numeric"
      minute="numeric"
      month="short"
      value={2012-12-12T19:04:26.000Z}
      year="numeric"
    />
  </dd>
  <FormattedMessage
    defaultMessage="Modified"
    id="boxui.itemDetails.modified"
    tagName="dt"
  />
  <dd>
    <FormattedDate
      day="numeric"
      hour="numeric"
      minute="numeric"
      month="short"
      value={2016-04-05T05:09:51.883Z}
      year="numeric"
    />
  </dd>
  <FormattedMessage
    defaultMessage="Archived"
    id="boxui.itemDetails.archived"
    tagName="dt"
  />
  <dd>
    <FormattedDate
      day="numeric"
      hour="numeric"
      minute="numeric"
      month="short"
      value={2024-09-20T11:39:15.000Z}
      year="numeric"
    />
  </dd>
  <FormattedMessage
    defaultMessage="Size"
    id="boxui.itemDetails.size"
    tagName="dt"
  />
  <dd>
    3.3 KB
  </dd>
  <FormattedMessage
    defaultMessage="Deleted"
    id="boxui.itemDetails.deleted"
    tagName="dt"
  />
  <dd>
    <FormattedDate
      day="numeric"
      hour="numeric"
      minute="numeric"
      month="short"
      value={2013-02-07T18:49:34.000Z}
      year="numeric"
    />
  </dd>
  <RetentionPolicy />
</dl>
`;

exports[`features/item-details/ItemProperties should render readonly url when only url is specified 1`] = `
<dl
  className="item-properties"
>
  <FormattedMessage
    defaultMessage="URL"
    id="boxui.itemDetails.url"
    tagName="dt"
  />
  <dd>
    box.com
  </dd>
  <RetentionPolicy />
</dl>
`;

exports[`features/item-details/ItemProperties should render retention policy details when specified 1`] = `
<dl
  className="item-properties"
>
  <RetentionPolicy
    dispositionTime={1741475146}
    openModal={[Function]}
    policyType="finite"
    retentionPolicyDescription="Test Description"
  />
</dl>
`;
